--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,5 +20,10 @@
   <%= @post.user %>
 </p>
 
+<%= render partial: 'comments/comments', locals: { commentable: @post} %>
+<%= render partial: 'comments/form', locals: { commentable: @post} %>
+
+<br/>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
